Fix Grid on mobile and Implement basic web-mon.

--- a/static/global.css
+++ b/static/global.css
@@ -51,6 +51,7 @@ body {
 	font-size: 14px;
 	line-height: 1.5;
 	color: #000000;
+    background-color: #e8eaed;
 }
 
 h1, h2, h3, h4, h5, h6 {
